# Prey-Predator

./: .gitignore  CMakeLists.txt  Prey-Predator.sln
Prey-Predator/: Animal.cpp  Animal.h  Controller.cpp  Controller.h  Coordinates.cpp  Coordinates.h  Deer.cpp  Deer.h  DeerStatistic.cpp  DeerStatistic.h  DeersPopulation.cpp  DeersPopulation.h  Food.cpp  Food.h  Grass.cpp  Grass.h  Interphase_movement.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  Polygon.cpp  Polygon.h  Population_interface.h  Prey-Predator.vcxproj  Prey-Predator.vcxproj.filters  SightField.cpp  SightField.h  Statistic.cpp  Statistic.h  StatisticCreator.cpp  StatisticCreator.h  Statistic_interface.h  TIme_of_year.cpp  TIme_of_year.h  Tiger.cpp  Tiger.h  TigerStatistic.cpp  TigerStatistic.h  TigersPopulation.cpp  (+2 more)
